# fastapi-project-template

./: .gitignore  Dockerfile  README.md  cli.py  dev.py  dev.sh  implemented.py  main.py  pyproject.toml
app/: db.py  local.py.example  settings.py
bdd/: conftest.py  test_validate_email.py
bdd/features/: validate_email.feature
common/: forbidden_email_providers.py  types.py
emails/: validations.py
entities/: __init__.py  base.py  user.py
http_helpers/: __init__.py  auth.py
models/: __init__.py  user.py
repositories/: __init__.py  user.py
repositories/orm_tools/: __init__.py  decorators.py
routers/: my.py
tests/: test_validate_email.py
usecases/: __init__.py  validate_email.py
