[tool.poetry]
name = "app"
version = "0.1.0"
description = "Python back-end"
authors = ["littlepea <little_pea@list.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

# DB access
pony = "^0.7.13"
psycopg2 = "^2.8.5"

# Integrations
requests = "^2.24.0"
pydantic = "^1.6.1"

# DRY Python
stories = "^1.0.2"
dependencies = "^2.0.1"

# Fast API
fastapi = "^0.61.0"
uvicorn = "^0.11.8"

# Configuration
python-dotenv = "^0.14.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-bdd = "^3.4.0"
pytest-sugar = "^0.9.4"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
